@@ -2,6 +2,10 @@
 
 JAVA_FILES = *.java
 
-RESOURCE_FILES = *.jwc *.html
+# For each component, ship the corresponding Java file as well 
+# (to support the Inspector).
+
+RESOURCE_FILES = *.jwc *.html \
+	$(patsubst %.jwc,%.java,$(wildcard *.jwc))
 
 include $(SYS_MAKEFILE_DIR)/Package.mk
